--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,17 @@
-server.port = 8081
+server.port = 8088
 
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/nevena?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.security.secret=nevena
+spring.security.expiration=3600
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=majkaca123@gmail.com
+spring.mail.password=majkacaprojekat123
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
